<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView android:text="@string/person_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle"
            />

        <LinearLayout android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp" >

                <EditText android:id="@+id/lend_name_edit"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:hint="@string/lend_name" />

            </LinearLayout>

            <EditText android:id="@+id/lend_phone_edit"
                android:inputType="phone"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lend_ph_no" />


        </LinearLayout>

        <TextView android:text="@string/amount"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle"
            />

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <EditText android:id="@+id/amt_lend_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/amt_placeholder" />
        </LinearLayout>

        <TextView android:text="@string/interest"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle"
            />
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <EditText android:id="@+id/interest_lend_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/interest_percentage" />
        </LinearLayout>

        <TextView android:text="@string/due_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle" />

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            >

            <TextView android:id="@+id/date_lend_edit"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:hint="@string/date_format" />
            <Button
                android:id="@+id/cal_lend_edit"
                android:text="Date"
                android:textColor="#fff"
                android:background="@drawable/button_custom"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView android:text="@string/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle" />

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <EditText
                android:id="@+id/comments_lend_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" >
            </EditText>

        </LinearLayout>
        <TextView android:text="@string/Authentication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">
            <EditText
                android:id="@+id/uid_edit"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/uid" />
            <EditText
                android:id="@+id/address_edit"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address" />
            <EditText
                android:id="@+id/state_edit"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state" />
            <EditText
                android:id="@+id/postal_edit"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/postal" />




        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            xmlns:fancy="http://schemas.android.com/tools">

            <Button
                android:id="@+id/update_lend_edit"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:textColor="#fff"
                android:background="@drawable/button_custom"
                android:layout_weight="1"
                android:layout_margin="12dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:text="Update"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
