<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView android:text="@string/person_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle"
            />

        <LinearLayout android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp" >

                <TextView android:id="@+id/borrow_name"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:layout_height="wrap_content"
                    />



            </LinearLayout>
            <TextView android:text="@string/phone_head"

                android:layout_width="match_parent"
                android:textColor="#000"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                style="?android:listSeparatorTextViewStyle"
                />

            <TextView android:id="@+id/borrow_phone"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                />


        </LinearLayout>

        <TextView android:text="@string/amount"

            android:layout_width="match_parent"
            android:textColor="#000"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle"
            />

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView android:id="@+id/amt_borrow"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <TextView android:text="@string/interest"

            android:layout_width="match_parent"
            android:textColor="#000"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle"
            />
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView android:id="@+id/interest_borrow"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:textSize="20dp"
                android:layout_height="wrap_content"

                />
        </LinearLayout>

        <TextView android:text="@string/due_date"
            android:layout_width="match_parent"
            android:textColor="#000"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle" />

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            >

            <TextView android:id="@+id/date_borrow"
                android:layout_width="match_parent"
                android:textColor="#000"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <TextView android:text="@string/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="20dp"
            style="?android:listSeparatorTextViewStyle" />

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:id="@+id/comments_borrow"
                android:textColor="#000"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                >
            </TextView>

        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            xmlns:fancy="http://schemas.android.com/tools">

            <Button
                android:id="@+id/paid_borrow"
                android:textColor="#fff"
                android:background="@drawable/button_custom"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="12dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:text="Paid"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>