<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView android:text="@string/person_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle"
            />

        <LinearLayout android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="10dp">

                <TextView android:id="@+id/lend_name"
                    android:layout_width="0dp"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                     />



            </LinearLayout>

            <TextView android:text="@string/phone_head"

                android:layout_width="match_parent"
                android:textColor="#000"
                android:layout_height="wrap_content"
                style="?android:listSeparatorTextViewStyle"
                />
            <TextView android:id="@+id/lend_phone"
                android:layout_marginBottom="8dp"
                android:textSize="20dp"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />


        </LinearLayout>

        <TextView android:text="@string/amount"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="20dp"
            style="?android:listSeparatorTextViewStyle"
            />

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView android:id="@+id/amt_lend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="20dp"
                 />
        </LinearLayout>

        <TextView android:text="@string/interest"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#000"
            style="?android:listSeparatorTextViewStyle"
            />
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView android:id="@+id/interest_lend"
                android:layout_width="match_parent"
                android:textSize="20dp"
                android:textColor="#000"
                android:layout_height="wrap_content"

                 />
        </LinearLayout>

        <TextView android:text="@string/due_date"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            style="?android:listSeparatorTextViewStyle" />

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            >

            <TextView android:id="@+id/date_lend"
                android:textSize="20dp"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />

        </LinearLayout>

        <TextView android:text="@string/comments"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            style="?android:listSeparatorTextViewStyle" />

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:id="@+id/comments_lend"
                android:textSize="20dp"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                 >
            </TextView>

        </LinearLayout>
        <TextView android:text="@string/Authentication"
            android:layout_width="match_parent"
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            style="?android:listSeparatorTextViewStyle" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">
            <TextView
                android:id="@+id/uid"
                android:textSize="20dp"
                android:textColor="#000"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                />
            <TextView
                android:id="@+id/address"
                android:textSize="20dp"
                android:textColor="#000"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/state"
                android:textSize="20dp"
                android:textColor="#000"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />
            <TextView
                android:id="@+id/postal"
                android:textSize="20dp"
                android:textColor="#000"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />




        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            xmlns:fancy="http://schemas.android.com/tools">

            <Button
                android:id="@+id/paid_lend"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:textColor="#fff"
                android:background="@drawable/button_custom"
                android:layout_weight="1"
                android:layout_margin="12dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:text="Paid"
                />

            <Button
                android:id="@+id/sms_lend"
                android:layout_width="0dp"
                android:textColor="#fff"
                android:background="@drawable/button_custom"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:layout_margin="12dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:text="SMS"
                />
            <Button
                android:id="@+id/call_lend"
                android:onClick="Call"
                android:textColor="#fff"
                android:background="@drawable/button_custom"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:layout_margin="12dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:text="Call"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>